<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Location FindMind</string>
    <string name="menu_settings">Settings</string>
    <string name="find_me_here">Find Me Here</string>
    <string name="send_location_by_sms">" SMS "</string>
    <string name="send_location_by_gmail"> E Mail </string>
    <string name="send_location_by_whatsapp"> WhatsApp </string>
    <string name="my_nearest_google_landmark_location">Click on &lt;Find Me Here&gt; button to get location</string>
    <string name="iconImage">Icon Image</string>
    <string name="Use_GPS_Satellites">Use GPS Provider</string>
    <string name="widget_label">Find Me Here</string>
    <string name="send_by">Send location by:</string>
    <string name="widget_provider_name">Find me here!</string>
    <string name="find_landmarks">Find nearby landmarks</string>
    <string name="share_Location">Share location via</string>
</resources>